# synkora-ai

./: .gitignore  .gitleaks.toml  ARCHITECTURE.md  CELERY_TASKS_MIGRATION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_SETUP.md  LICENSE  README.md  SECURITY.md  SETUP.md  THIRD_PARTY_LICENSES.md  docker-compose.load-testing.yml  docker-compose.yml  get.sh  install.sh  package.json
api/: .dockerignore  .env.example  .env.test  .env.test.ci  .gitignore  .ruff.toml  CLAUDE_SKILLS.md  Dockerfile  Dockerfile.dev  Dockerfile.k6-runner  Dockerfile.llm-proxy  README.md  alembic.ini  app.py  create_super_admin.py  k6_runner_service.py  llm_proxy_entrypoint.py  mypy.ini  promote_to_platform_owner.py  pyproject.toml  seed_agent_builder_assistant.py  seed_demo_slack_agent.py  seed_platform_config.py  seed_platform_engineer_agent.py  setup_noninteractive.py  sync_paddle_plans.py  sync_stripe_plans.py  test_langfuse.py  test_langfuse_connection.py  update_builder_assistant_llm_config.py
api/docker/: entrypoint.sh
api/migrations/: env.py
api/migrations/versions/: 20251218_0925_357b02e6ee7e_initial_schema.py  20251219_0901_0b8f93a075e2_add_followup_tracking_models.py  20260105_0240_907da4603212_add_agent_performance_config.py  20260120_0912_add_agent_webhook_tables.py  20260122_1400_add_agent_output_config_tables.py  20260125_0131_add_adk_workflow_fields_to_agents.py  20260203_1200_add_user_oauth_tokens.py  20260204_0200_add_conversation_memory_fields.py  20260205_1000_add_workflow_execution_tables.py  20260206_1000_add_role_based_agents.py  20260207_1000_add_tenant_domain_fields.py  20260207_1200_add_gitlab_datasource_type.py  20260207_1400_add_telegram_integration.py  20260213_0933_cdeeb66d1a12_merge_heads.py  20260214_1000_add_bot_worker_assignment_fields.py  20260215_0900_add_branding_colors.py  20260216_1000_add_paddle_payment_fields.py  20260219_1000_add_slack_event_mode.py  20260219_1100_add_max_api_keys_to_plans.py  20260220_1000_add_widget_key_prefix.py  20260221_1000_add_performance_indexes.py  20260221_1100_add_scalability_indexes.py  20260223_1000_add_platform_oauth_apps.py  20260227_0245_cc30e80dc089_add_composite_index_on_messages_.py  20260227_1030_switch_message_ordering_to_created_at.py  20260303_1000_add_load_testing_tables.py  20260304_0817_41f25b970c7a_merge_message_ordering_and_load_testing.py  20260311_1000_add_agent_subscriptions.py  20260318_1000_add_whatsapp_device_link_fields.py  20260319_0001_add_webhook_event_delivery_id_index.py  20260326_0001_add_autonomous_enabled.py  20260327_0001_add_agent_approval_requests.py  20260402_0001_add_celery_task_id_to_task_executions.py  20260404_0001_set_role_statement_timeout.py  20260405_0001_add_telegram_and_permission_indexes.py  20260406_0001_add_slack_bot_id_to_agent_tools.py  20260408_0001_add_created_by_to_slack_telegram_bots.py  20260409_0001_add_debate_sessions.py  20260409_0002_add_wiki_articles.py  20260412_0001_add_widget_identity_and_routing.py  (+34 more)
api/scripts/: export_openapi.py  sync_tool_filter.py
api/src/: __init__.py  app.py  celery_app.py  router_registry.py
api/src/bot_worker/: __init__.py  config.py  consistent_hash.py  health_server.py  main.py  redis_state.py  worker.py
api/src/config/: __init__.py  celery.py  database.py  feature.py  redis.py  security.py  settings.py  storage.py
api/src/controllers/: activity_logs.py  agent_api_keys.py  agent_api_public.py  agent_domains.py  agent_roles.py  agent_subscriptions.py  app_store_sources.py  billing.py  bot_workers.py  charts.py  contact.py  custom_tools.py  data_analysis.py  data_sources.py  database_connections.py  documents.py  escalations.py  files.py  human_contacts.py  integration_configs.py  kb_webhooks.py  knowledge_autopilot.py  knowledge_bases.py  llm_proxy.py  load_tests.py  mcp_servers.py  monitoring_integrations.py  okta_sso.py  permissions.py  platform_agent.py  platform_settings.py  profiles.py  projects.py  proxy_configs.py  rate_my_life.py  recall_webhooks.py  scheduled_tasks.py  scim.py  slack_bots.py  slack_webhooks.py  (+12 more)
api/src/core/: __init__.py  database.py  errors.py  ml_client.py  scraper_client.py  websocket.py
api/src/handlers/: cloud_run_handler.py  do_functions_handler.py  do_functions_server.py  lambda_handler.py
api/src/helpers/: __init__.py  chat_helpers.py  streaming_helpers.py
api/src/libs/: __init__.py
api/src/middleware/: __init__.py  agent_api_auth.py  auth_middleware.py  cors_middleware.py  credit_middleware.py  permissions.py  plan_restriction_middleware.py  rate_limit_middleware.py  security_middleware.py  timing_middleware.py  widget_auth.py
api/src/models/: __init__.py  activity_log.py  agent.py  agent_a2a_task.py  agent_api_key.py  agent_api_usage.py  agent_approval.py  agent_compute.py  agent_context_file.py  agent_domain.py  agent_knowledge_base.py  agent_llm_config.py  agent_mcp_server.py  agent_output_config.py  agent_pricing.py  agent_rating.py  agent_revenue.py  agent_role.py  agent_sub_agent.py  agent_subscription.py  agent_template.py  agent_tool.py  agent_user.py  agent_version.py  agent_webhook.py  agent_widget.py  app.py  app_review.py  app_store_source.py  base.py  chart.py  conversation.py  conversation_share.py  credit_balance.py  credit_topup.py  credit_transaction.py  custom_tool.py  daily_digest.py  data_source.py  database_connection.py  (+53 more)
api/src/schemas/: agent_api.py  agent_domain.py  agent_llm_config.py  autonomous_agent.py  base.py  debate.py  load_testing.py
api/src/services/: __init__.py  agent_output_service.py  app_service.py  audit_chain_service.py  auth_service.py  conversation_service.py  conversation_share_service.py  data_analysis_service.py  document_generation_service.py  human_approval_service.py  model_service.py  report_export_service.py  saml_service.py  scim_service.py  session_service.py  storage_service.py  websocket_auth_service.py
api/src/tasks/: __init__.py  a2a_tasks.py  agent_tasks.py  batch_poll_task.py  billing_tasks.py  company_brain_tasks.py  compute_pool_tasks.py  data_source_tasks.py  kb_tasks.py  (+13 more)
api/tests/: conftest.py
(+1280 files in other folders)
